Android Architecture 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,51 @@
   Timestamp                = {2015.09.23}
 }
 
+@Electronic{androidPublish,
+  Title                    = {Get Started with Publishing},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/distribute/googleplay/start.html},
+  Language                 = {English},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/distribute/googleplay/start.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
+@Electronic{androidSource,
+  Title                    = {The Android Source Code: Governance Philosophy},
+  Author                   = {Android},
+  HowPublished             = {https://source.android.com/source/},
+  Language                 = {English},
+  Organization             = {Google},
+  Url                      = {https://source.android.com/source/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
+@Book{annuzziAndroid,
+  Title                    = {Advanced Android Application Development},
+  Author                   = {Joseph Annuzzi},
+  Publisher                = {Addison-Wesley Professional},
+  Year                     = {2014},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
+@Electronic{applePublish,
+  Title                    = {Apple Developer Program},
+  Author                   = {Apple},
+  HowPublished             = {https://developer.apple.com/programs/},
+  Organization             = {Apple},
+  Url                      = {https://developer.apple.com/programs/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @Article{Basu2014,
   Title                    = {Overview of blood components and their preparation},
   Author                   = {Basu, Debdatta and Kulkarni, Rajendra},
@@ -32,6 +77,16 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
 }
 
+@Book{Benkler2006,
+  Title                    = {The Wealth of Networks},
+  Author                   = {Yochai Benkler},
+  Publisher                = {Yale University Press},
+  Year                     = {2006},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.10}
+}
+
 @Article{Bolton-Maggs2013,
   Title                    = {Transfusion safety in 2012: main messages from the SHOT Annual Report for 2012},
   Author                   = {Bolton-Maggs, P. H. B.},
@@ -40,6 +95,8 @@
   Number                   = {4},
   Pages                    = {217--218},
   Volume                   = {23},
+
+  __markedentry            = {[ilias:6]},
   ISSN                     = {1365-3148},
   Owner                    = {ilias},
   Publisher                = {Blackwell Publishing Ltd},
@@ -96,6 +153,16 @@
   Timestamp                = {2015.10.04}
 }
 
+@Article{androidArchAnalysis,
+  Title                    = {Analysis of the Android Architecture},
+  Author                   = {Stefan Brahler},
+  Journal                  = {karlsruhe institute of technology},
+  Year                     = {2010},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @InProceedings{Gamification_on_Participation,
   Title                    = {Effects of Gamification on Participation and Data Quality in a Real-World Market Research Domain},
   Author                   = {Jared Cechanowicz and Carl Gutwin and Briana Brownell and Larry Goodfellow},
@@ -150,6 +217,16 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.08}
+}
+
+@Book{collinsAndroid,
+  Title                    = {Android in Practice},
+  Author                   = {Charlie Collins},
+  Publisher                = {Manning Publications},
+  Year                     = {2011},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
 }
 
 @Article{Custer2007,
@@ -292,6 +369,7 @@
 }
 
 @Article{1973,
+  Title                    = {The Gift Relationship: From Human Blood to Social Policy},
   Author                   = {Feingold, Eugene},
   Journal                  = {Medical Care},
   Year                     = {1973},
@@ -468,6 +546,17 @@ Timothy Grance},
   Timestamp                = {2015.10.07}
 }
 
+@Electronic{smartphoneMarketShare,
+  Title                    = {Smartphone OS Market Share},
+  Author                   = {IDC},
+  Language                 = {English},
+  Url                      = {http://www.idc.com/prodserv/smartphone-os-market-share.jsp},
+  Year                     = {2015},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @Article{BlohmIvo2013,
   Title                    = {Gamification - Design of IT-Based Enhancing Services for Motivational Support and Behavioral Change},
   Author                   = {Ivo Blohm, Jan Marco Leimeister},
@@ -476,6 +565,23 @@ Timothy Grance},
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.08}
+}
+
+@Article{Kaplan201059,
+  Title                    = {Users of the world, unite! The challenges and opportunities of Social Media },
+  Author                   = {Andreas M. Kaplan and Michael Haenlein},
+  Journal                  = {Business Horizons },
+  Year                     = {2010},
+  Number                   = {1},
+  Pages                    = {59 - 68},
+  Volume                   = {53},
+
+  Doi                      = {http://dx.doi.org/10.1016/j.bushor.2009.09.003},
+  ISSN                     = {0007-6813},
+  Keywords                 = {Social Media},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.09},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
 }
 
 @Article{landsteinerABO,
@@ -705,6 +811,16 @@ Timothy Grance},
   Timestamp                = {2015.10.03}
 }
 
+@Article{mvpPotel,
+  Title                    = {MVP: Model-View-Presenter},
+  Author                   = {Mike Potel},
+  Journal                  = {Taligent},
+  Year                     = {1996},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @Book{prenskyGamification,
   Title                    = {Digital Game-Based Learning},
   Author                   = {Marc Prensky},
@@ -719,6 +835,7 @@ Timothy Grance},
 @Article{citeulike:382810,
   Title                    = {MDA: A Formal Approach to Game Design and Game Research},
   Author                   = {Robin, Hunicke and Marc, Leblanc and Robert, Zubek},
+  Journal                  = {AAAI workshop},
   Year                     = {2004},
 
   Abstract                 = {{In this paper we present the MDA framework (standing for Mechanics, Dynamics, and Aesthetics), developed and taught as part of the Game Design and Tuning Workshop at the Game Developers Conference, San Jose 2001-2004.
@@ -750,6 +867,23 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
+}
+
+@Book{androidHacks,
+  Title                    = {50 Android Hacks},
+  Author                   = {Carlos Sessa},
+  Publisher                = {Manning Publications},
+  Year                     = {2013},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
+@Article{shaver2007impact,
+  Title                    = {Impact of the social media on Consumer Behavior in the United},
+  Author                   = {Shaver, Dan},
+  Journal                  = {University of Central Florida},
+  Year                     = {2007}
 }
 
 @Article{Stainsby01092000,
@@ -825,6 +959,24 @@ URN: urn:nbn:de:0114-fqs0501297},
   Keywords                 = {adverse reactions, haemovigilance, haemovigilance system, hemovigilance, International Haemovigilance Network, quality management, safety management, transfusion reactions},
   Publisher                = {Blackwell Publishing Ltd},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2010.01442.x}
+}
+
+@Article{1974,
+  Title                    = {Consumer Socialization},
+  Author                   = {Ward, Scott},
+  Journal                  = {Journal of Consumer Research},
+  Year                     = {1974},
+  Number                   = {2},
+  Pages                    = {pp. 1-14},
+  Volume                   = {1},
+
+  Abstract                 = {This paper traces the development of interest in consumer socialization. Major policy and conceptual issues are posed, and research in several areas of study is reviewed. Directions for research are specified in three key areas: consumer socialization processes, content of learning, and permanence of early learning.},
+  Copyright                = {Copyright © 1974 Journal of Consumer Research, Inc.},
+  ISSN                     = {00935301},
+  Jstor_formatteddate      = {Sep., 1974},
+  Language                 = {English},
+  Publisher                = {Oxford University Press},
+  Url                      = {http://www.jstor.org/stable/2489100}
 }
 
 @Book{circulatorySystem,
