--- a/thesis.tex
+++ b/thesis.tex
@@ -144,7 +144,7 @@
 
 \appendix
 
-\includepdf[scale=0.65, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf} 
+\includepdf[scale=0.65, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf}\label{Donor Questionnaire} 
 
 \include{glossary}
 
