fix bibliography error

--- a/references.bib
+++ b/references.bib
@@ -187,16 +187,6 @@
   Keywords                 = {ISO standards;document handling;electrocardiography;groupware;health care;medical information systems;middleware;open systems;telemedicine;Clinical Document Architecture;DICOM 3;HL7/CDA framework;ISO standard;SCP-ECG;WebOnCOLL collaboration infrastructure;cardiology;clinical document templates;clinical documents;deployment;design;emerging telemedicine protocols;exchanged clinical content;guidelines;healthcare settings;imaging;interoperability;medical specialties;medical standards;middleware services;open standards;physical setting;regional healthcare networks;remote consultation services;specifications;telemedicine services;Biomedical imaging;Collaborative work;DICOM;Electrocardiography;Guidelines;ISO standards;Medical services;Middleware;Protocols;Telemedicine}
 }
 
-@Article{characteristicsCloud,
-  Title                    = {The Characteristics of Cloud Computing},
-  Author                   = {Chunye Gong, Jie Liu, Qiang Zhang, Haitao Chen and Zhenghu Gong},
-  Journal                  = {39th International Conference on Parallel Processing Workshops},
-  Year                     = {2010},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.11}
-}
-
 @Electronic{bloodDonationDefinition,
   Title                    = {Blood donation},
   Author                   = {Mayo Clinic},
@@ -434,6 +424,16 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.04}
+}
+
+@Article{characteristicsCloud,
+  Title                    = {The Characteristics of Cloud Computing},
+  Author                   = {Chunye Gong},
+  Journal                  = {39th International Conference on Parallel Processing Workshops},
+  Year                     = {2010},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.11}
 }
 
 @Article{nist,
