Android fundamental Components 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,28 @@
   Timestamp                = {2015.09.23}
 }
 
+@Electronic{androidContentProviders,
+  Title                    = {Android Content Providers},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/guide/topics/providers/content-providers.html},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/guide/topics/providers/content-providers.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
+@Electronic{androidFundamentalsOfficial,
+  Title                    = {Android Application Fundamentals},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/guide/components/fundamentals.html},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/guide/components/fundamentals.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
 @Electronic{androidPublish,
   Title                    = {Get Started with Publishing},
   Author                   = {Android},
@@ -34,6 +56,30 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.11}
+}
+
+@Electronic{broadcastReceiver,
+  Title                    = {Android Broadcast Receiver},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/reference/android/content/BroadcastReceiver.html},
+  Language                 = {English},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/reference/android/content/BroadcastReceiver.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
+@Electronic{servicesAndroid,
+  Title                    = {Android Services},
+  Author                   = {Android},
+  HowPublished             = {http://developer.android.com/guide/components/services.html},
+  Language                 = {English},
+  Organization             = {Google},
+  Url                      = {http://developer.android.com/guide/components/services.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
 }
 
 @Book{annuzziAndroid,
@@ -484,6 +530,18 @@ Timothy Grance},
   Bdsk-url-1               = {https://www.grnet.gr/en/node/400},
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@Electronic{androidComponentsKnoxville,
+  Title                    = {Components of an Android Application},
+  Author                   = {Mike Guidry},
+  HowPublished             = {http://eagle.phys.utk.edu/guidry/android/applicationFundamentals.html},
+  Language                 = {English},
+  Organization             = {The University of Tennessee Knoxville},
+  Url                      = {http://eagle.phys.utk.edu/guidry/android/applicationFundamentals.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
 }
 
 @Electronic{angular,
